2012-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/general/subscription-dialog.js: ensure that
	"response" is not null before processing it, otherwise mark result
	as void.
	(onSearchInputBlur, onSearchInputFocus): removed obsolete event
	handler, since the "search" text fields now handle this properly
	for us.

	* chrome/content/calendar/roles-dialog.js (onDAVQueryComplete),
	chrome/content/addressbook/roles-dialog.js (onDAVQueryComplete):
	ensure that "response" is not null before invoking "indexOf" on it.

	* chrome/content/addressbook/newcard-overlay.js
	(SIOnNewCardOverlayLoad): adapted to new ab API.

2012-02-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/messenger/startup-overlay.js,
	chrome/content/messenger/update-dialog.js: updated to the new
	AddonManager API.

	* chrome/content/messenger/folders-update.js: disabled version checks.
	(checkAvailability): create a new reference to "this" for the
	callback function.

	* chrome/content/messenger/startup-overlay.js: temporarily
	disabled update code.

2012-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/general/subscription-utils.js (subscriptionURL):
	properly encode the folder url part with encodeURIComponent.

2012-01-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/addressbook-overlay.js
	(SIOnLoadHandler): checkAvailability is now callback based, we
	therefore must enable the toolbar via a callback function.

2011-12-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/calendars-list-overlay.js
	(SICalendarListTreeController.isCommandEnabled): directoryChecker
	is now callback based, when first invoked, provide a proper
	"yesCallback" and reinvoke the command check to properly enable
	our custom menus.

	* chrome/content/messenger/folders-update.js:
	(directoryChecker.checkAvailability) invoke "yesCallback" only
	when set.

2011-11-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
