@@ -14,8 +14,12 @@ overlay chrome://global/content/commonDialog.xul chrome://sogo-integrator/conten
 
 overlay chrome://messenger/content/messenger.xul chrome://sogo-integrator/content/messenger/startup-overlay.xul
 
+# replacement of "AddContact", used when clicking on the "star" button, located next to addresses displayed in email headers
+overlay chrome://messenger/content/msgHdrViewOverlay.xul chrome://sogo-integrator/content/headerview-overlay.xul
+
 overlay chrome://messenger/content/addressbook/abNewCardDialog.xul chrome://sogo-integrator/content/addressbook/newcard-overlay.xul
 overlay chrome://messenger/content/addressbook/abMailListDialog.xul chrome://sogo-integrator/content/addressbook/newlist-overlay.xul
+
 overlay chrome://sogo-connector/content/addressbook/addressbook.groupdav.overlay.xul chrome://sogo-integrator/content/addressbook/addressbook-overlay.xul
 overlay chrome://sogo-connector/content/addressbook/preferences.addressbook.groupdav.xul chrome://sogo-integrator/content/addressbook/preferences-overlay.xul
 overlay chrome://sogo-connector/content/addressbook/common-card-overlay.xul chrome://sogo-integrator/content/addressbook/common-card-overlay.xul
