@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<!DOCTYPE overlay>
+<overlay id="inverseHeaderViewOverlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
+  <script type="application/x-javascript"
+    src="chrome://sogo-integrator/content/headerview-overlay.js"/>
+</overlay>
